--- a/src/Components/Main/Program/Program.css
+++ b/src/Components/Main/Program/Program.css
@@ -27,30 +27,28 @@
 
 .program_box
 {
+    display: flex;
     width: 100%;
     height: 28rem;
     margin: 0 auto 3rem auto;
-    display: flex;
 }
 
 
 .program_list > li
 {
-    font-family: "Poppins";
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
     font-size: 1.2rem;
     font-weight: 800;
     text-transform: uppercase;
     box-shadow: inset 0 -1px 0 #ccc;
     padding:0 20px 0 20px; 
-    background-color: white;
+    background-color: var(--white);
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     width: 100%;
     height: 7rem;
-    align-content: center;
-    margin-bottom: 0;
-    margin-right: 10rem;
+    margin:0 10rem 0 0;
     cursor: pointer;
 }
 
@@ -67,8 +65,8 @@
 .program_image
 {
     width: 100%;
-    height: 28rem;
-    background-color: white;
+    height: inherit;
+    background-color: var(--white);
 }
 
 .program_image > img 
@@ -83,18 +81,13 @@
     {
         height: 26rem;
     }
+
     .program_list > li
     {
         font-size: 1.1rem;
         height: 6.5rem;
         margin-right: 8.7rem;
     }
-
-    .program_image
-    {
-        height: 26rem;
-    }
-
 }
 
 @media screen and (max-width: 980px)
@@ -109,11 +102,6 @@
         font-size: 1rem;
         height: 5.5rem;
         margin-right: 7.7rem;
-    }
-
-    .program_image
-    {
-        height: 22rem;
     }
 }
 
@@ -130,29 +118,6 @@
         height: 5rem;
         margin-right: 6.5rem;
     }
-
-    .program_image
-    {
-        height: 20rem;
-    }
-}
-
-@media screen and (max-width: 790px)
-{
-    .program_box
-    {
-        flex-direction: column-reverse;
-        height: 40rem;
-    }
-
-    .program_list > li
-    {
-        font-size: 1.2rem;
-        height: 5rem;
-        margin-right: 0rem;
-        text-align: center;
-    }
-
 }
 
 @media screen and (max-width: 790px)
