--- a/src/Components/Reusable/Error/Error.css
+++ b/src/Components/Reusable/Error/Error.css
@@ -8,17 +8,18 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1000;
     width: 100%;
     height: 100vh;
     background-color: var(--bg-offwhite);
     text-align: center;
-    
+    z-index: 1000;
 }
 
 .error_main
 {
    color: #333;
+   -webkit-transform: translateY(-5%); /* For Safari */
+   -ms-transform: translateY(-5%); /* For Firefox */
    transform: translateY(-5%);
 }
 
@@ -104,5 +105,4 @@
     {
         margin: 1.4rem auto;
     }
-
 }
