--- a/src/App.css
+++ b/src/App.css
@@ -42,30 +42,11 @@ li
 }
 
 /* button */
-.btn
+
+#pointer
 {
-    display: block;
-    padding: 16px 32px;
-    border: 3px solid var(--bg-main);
-    background-color: transparent;
-    color: var(--bg-main);
     cursor: pointer;
-    font-size: 1rem;
-    transition: all 0.5s;
 }
 
-.btn:hover
-{
-    background-color: var(--bg-main);
-    color: var(--white);
-}
 
-@media screen and (max-width: 540px)
-{
-    .btn
-    {
-        padding: 12px 24px;
-    }
-
-}
 
