--- a/src/Components/People/Profile/Template.css
+++ b/src/Components/People/Profile/Template.css
@@ -1,9 +1,3 @@
-/* to change cursor */
-#pointer
-{
-    cursor: pointer;
-}
-
 /* dropdown menu */
 .drop-menu
 {
@@ -54,13 +48,15 @@
 .profile_head
 {
     background-color: var(--bg-main);
-    padding: 0 6rem;
     width: inherit;
     height: 30rem;
     color: var(--white);
     font-family: "Roboto", sans-serif;
     line-height: 1.4;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .head_text h2
@@ -127,11 +123,11 @@ ol > li
 
 .photo_container
 {
-    width: 36%;
     height: 28rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
+    padding-right: 4rem;
 }
 
 .profile_photo
@@ -241,31 +237,12 @@ div[class^='child_sec-']
     position: absolute;
 }
 
+/* Button Position */
 .btn-prof
 {
-    display: block;
-    padding: 16px 32px;
-    font-size: 1rem;
-    background-color: transparent;
-    cursor: pointer;
     position: absolute;
     bottom: 4%;
     right: 2%;
-    color: white;
-    border: 2px solid white;
-    border-radius: 30px;
-    transition: all 0.5s;
-}
-
-.btn-prof:hover
-{
-    background-color: white;
-    color: var(--bg-main);
-}
-
-.btn-prof:active
-{
-    transform: scale(0.96);
 }
 
 @media screen and (max-width: 1260px)
@@ -575,6 +552,7 @@ div[class^='child_sec-']
     .head_text 
     {
         padding-top: 2.5rem;
+
     }
     
     .head_text h5
