--- a/src/Components/Facilities/Facilities.css
+++ b/src/Components/Facilities/Facilities.css
@@ -20,10 +20,21 @@
     margin-top: 2rem;
 } 
 
-.article_img > img
+.carousel_div,
+.carousel_div > *
 {
     width: 100%;
     height: 100%;
+}
+
+.slider-img
+{
+    height: 26rem;
+}
+
+.slider-img img
+{
+    height: 100%; 
 }
 
 .fac_common
@@ -140,6 +151,11 @@
         height: calc(56%);
         margin-top: 0;
     } 
+
+    .slider-img
+    {
+        height: 100%;
+    }
     
     .fac_common
     {
@@ -189,6 +205,11 @@
     {
         height: calc(52%);
     } 
+
+    .slider-img
+    {
+        height: 100%;
+    }
     
     .fac_common
     {
@@ -226,6 +247,11 @@
     {
         height: calc(50%);
     } 
+
+    .slider-img
+    {
+        height: 100%;
+    }
     
     .fac_common
     {
