--- a/src/Components/Reusable/Loader/Loader.css
+++ b/src/Components/Reusable/Loader/Loader.css
@@ -1,20 +1,28 @@
 .loader-container
 {
-  width: 100%;
-  height: 100vh;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0%;
+    z-index: 10;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.load-center
+.loader
 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 64px;
+    height: 80px;
+    margin: 0 auto;
+    position: relative;
 }
 
 .loader,
-.loader div {
-  box-sizing: border-box;
+.loader div 
+{
+    box-sizing: border-box;
 }
 
 .loader div {
@@ -26,15 +34,15 @@
   animation: loader 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
 }
 .loader div:nth-child(1) {
-  left: 8px;
+  left: 0px;
   animation-delay: -0.24s;
 }
 .loader div:nth-child(2) {
-  left: 32px;
+  left: 24px;
   animation-delay: -0.12s;
 }
 .loader div:nth-child(3) {
-  left: 56px;
+  left: 48px;
   animation-delay: 0s;
 }
 @keyframes loader {
