--- a/src/Components/People/Faculty/Faculty.css
+++ b/src/Components/People/Faculty/Faculty.css
@@ -167,10 +167,14 @@
 
 @media screen and (max-width: 980px)
 {
+    .section_faculty
+    {
+        padding: 2rem 0;
+    }
 
     .faculty_grid
     {
-        width: 60%;
+        width: 34rem;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(11, 16rem);
         grid-column-gap: 40px;
@@ -208,7 +212,7 @@
 
     .faculty_grid
     {
-        width: 80%;
+        width: 26rem;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(11, 10rem);
         grid-column-gap: 40px;
@@ -218,4 +222,28 @@
     {
         font-size: 1rem;
     }
+}
+
+@media screen and (max-width: 480px)
+{
+    .faculty_card 
+    {
+        padding: 0.8rem;
+    }
+    
+    .faculty_grid
+    {
+        width: 92%;
+    }
+
+    .faculty_grid h3
+    {
+        font-size: 1.2rem;
+    }
+
+    .faculty_grid p
+    {
+        font-size: 0.98rem;
+    }
+
 }
