--- a/src/Components/Reusable/Button/Button.css
+++ b/src/Components/Reusable/Button/Button.css
@@ -46,3 +46,11 @@
         padding: 12px 24px;
     }
 }
+
+@media screen and (max-width: 360px)
+{
+    .btn
+    {
+        padding: 10px 20px;
+    }
+}
