Added Academics Component

--- a/src/Components/People/Profile/Template.css
+++ b/src/Components/People/Profile/Template.css
@@ -54,7 +54,6 @@
 }
 
 
-
 /* dropdown menu */
 .drop-menu
 {
@@ -482,9 +481,28 @@ div[class^='child_sec-']
         transform: scale(0.96) translateX(-50%);
     }
 
-    .side_drop 
+    .side_hide
     {
         display: none;
+    }
+
+    .side_drop ul
+    {
+        margin-top: 0.5rem;
+    }
+
+    .side_drop ul li
+    {
+        font-size: 1.1rem;
+        text-decoration: underline;
+        padding: 0.5rem;
+    }
+
+    .side_drop ul li:hover
+    {
+        background-color: transparent;
+        color: white;
+        transform: translateX(-2px);
     }
 }
 
