--- a/src/Components/Reusable/Title/Title.css
+++ b/src/Components/Reusable/Title/Title.css
@@ -11,6 +11,7 @@
 
 .title_bg > h1
 {
+    text-transform: uppercase;
     font-size: 6rem;
     font-weight: 900;
     color: var(--white);
@@ -49,6 +50,24 @@
         font-size: 5rem;
         top: 50%;
         left: 7%; 
+    }
+}
+
+@media screen and (max-width: 520px)
+{
+    .title_bg > h1
+    {
+        font-size: 3.5rem;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .title_bg > h1::before 
+    {
+        content: " ";
+        width: 0;
+        height: 0;
     }
 }
 
