--- a/src/Components/Reusable/Sidebar/Sidebar.css
+++ b/src/Components/Reusable/Sidebar/Sidebar.css
@@ -10,7 +10,8 @@
     font-size: 1.5rem;
 }
 
-.side-items
+.side-items,
+.icons
 {
     display: none;
 }
@@ -22,32 +23,38 @@
         position: fixed;
         top: 0%;
         right: 0;
-        width: 40%;
-        max-width: 350px;
+        width: 27%;
+        min-width: 250px;
         height: calc(100vh - 8.6rem);
         background-color: var(--bg-main);
         border-top: 1px solid black;
         transform: translateY(8.5rem);
     }
 
-    .side-items
+    .side-items,
+    .icons
     {
         display: block;
-        text-align: center;
+        
     }
 
     .side-items li
     {
-        display: block;
-        font-size: 1.5rem; 
+        display: flex;
+        font-size: 1.25rem; 
         color: var(--white);
-        padding: 1rem 2rem;
+        padding: 1.2rem 0.9rem;
     }
 
     .side-items li:hover
     {
         color: var(--bg-main);
         background-color: var(--white);
+    }
+
+    .side-items li:hover > .icons
+    {
+        fill: var(--bg-main);
     }
 }
 
@@ -69,15 +76,16 @@
 {
     .sidebar_main
     {
-        width: 60%;
+        width: 50%;
+        min-width: 200px;
         height: calc(100vh - 4.5rem);
         transform: translateY(4.4rem);
     }
 
     .side-items li
     {
-        font-size: 1.2rem; 
-        padding: 0.8rem 1.6rem;
+        font-size: 1.25rem; 
+        padding: 0.9rem 1rem;
     }
 
 }
