--- a/src/Components/People/Faculty/Faculty.css
+++ b/src/Components/People/Faculty/Faculty.css
@@ -1,6 +1,7 @@
 .section_faculty
 {
     width: 100%;
+    height: 100%;
     padding: 3rem 0 2rem 0;
     background-color: #f7f7f7;
     font-family: "Montserrat";
@@ -16,7 +17,7 @@
 {
     width: 83%;
     display: grid;
-    grid-template-rows: repeat(6, 15.8rem);
+    grid-template-rows: auto;
     grid-template-columns: repeat(2, 1fr);
     grid-row-gap: 35px;
     grid-column-gap: 50px;
@@ -47,7 +48,7 @@
 .faculty_card 
 {
     width: 100%;
-    height: 100%;
+    height: 15.8rem;
     display: grid;
     grid-template-rows: 150px 1fr;
     grid-template-columns: 130px 1fr;
@@ -108,6 +109,12 @@
     transform: scale(0.97);
 }
 
+#hide-para
+{
+    display: block;
+}
+
+
 @media screen and (max-width: 1320px)
 {
 
@@ -142,7 +149,7 @@
     .faculty_grid
     {
         width: 92%;
-        grid-template-rows: repeat(6, 16rem);
+        grid-template-rows: repeat(auto, 16rem);
         grid-column-gap: 40px;
     }
 
@@ -176,7 +183,7 @@
     {
         width: 34rem;
         grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(11, 16rem);
+        grid-template-rows: repeat(auto, 16rem);
         grid-column-gap: 40px;
     }
 
@@ -214,13 +221,18 @@
     {
         width: 26rem;
         grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(11, 10rem);
+        grid-template-rows: repeat(auto, 8rem);
         grid-column-gap: 40px;
     }
 
     .faculty_grid p
     {
         font-size: 1rem;
+    }
+
+    .faculty_card 
+    {
+        height: 100%;
     }
 }
 
