--- a/src/Components/Reusable/Footer/Footer.css
+++ b/src/Components/Reusable/Footer/Footer.css
@@ -1,237 +1,147 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
-
-@media (min-width: 768px) 
+.section_footer 
 {
-    .blue 
-    {
-        background-color: #031d3a;
-    }
-
-    .container_f 
-    {
-        display: flex;
-        margin: 0%;
-        padding: 0%;
-    }
-
-    .logo 
-    {
-        flex: 1;
-        order: 1;
-        margin: 4%;
-    }
-
-    .logo img 
-    {
-        width: 70%;
-    }
-
-    .vox_f 
-    {
-        align-items: flex-start;
-        order: 2;
-        flex: 3;
-        margin-top: 2%;
-        margin-bottom: 2%;
-        margin-right: 10%;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .hox_f1 
-    {
-        flex: 1;
-        margin: 1%;
-        display: flex;
-    }
-    
-    .item_f1 
-    {
-        flex: 1;
-        font-family: "Roboto Slab", sans-serif;
-        color: white;
-        font-weight: 500;
-        margin-right: 20%;
-        text-decoration: none;
-    }
-
-    .item_f2 
-    {
-        flex: 1;
-        font-family: "Roboto Slab", sans-serif;
-        color: rgb(196, 196, 196);
-        font-weight: 400;
-        font-size: 85%;
-        margin-right: 5%;
-        text-decoration: none;
-    }
-
-    .copyright 
-    {
-        font-family: "Roboto Slab", sans-serif;
-        color: rgb(255, 255, 255);
-        padding-bottom: 30px;
-        font-size: 80%;
-        text-align: center;
-    }
+    background-color: #031d3a;
 }
 
-@media (max-width: 768px) 
+.container_f 
 {
-    .blue 
-    {
-        background-color: #031d3a;
-    }
+    display: flex;
+    align-items: center;
+    padding: 2rem 0;
+}
 
-    .container_f 
-    {
-        display: flex;
-        margin: 0%;
-        padding: 0%;
-        flex-direction: column;
-        align-items: center;
-    }
+.logo 
+{
+    width: 16rem;
+    height: 6rem;
+    margin:0 2%;
+}
 
-    .logo 
-    {
-        flex: 1;
-        order: 1;
-        margin: 4%;
-    }
+.logo img 
+{
+    width: 100%;
+    height: 100%;
+}
 
-    .logo img 
-    {
-        width: 80%;
-    }
+.vox_f 
+{
+    width: calc(100% - 20rem);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0 3%;
+}
 
-    .vox_f 
-    {
-        order: 2;
-        flex: 1;
-        margin-top: 2%;
-        margin-bottom: 2%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+.hox_f1 
+{
+    width: 100%;
+    margin: 1% 0;
+}
 
-    .hox_f1 
-    {
-        flex: 1;
-        margin: 1%;
-        display: flex;
-    }
+.item_f1 
+{
+    font-family: "Roboto Slab", sans-serif;
+    color: white;
+    font-weight: 500;
+    margin-right: 6.5%;
+}
 
-    .item_f1 
-    {
-        flex: 1;
-        font-family: "Roboto Slab", sans-serif;
-        color: white;
-        font-weight: 500;
-        margin-left: 30px;
-        margin-right: 30px;
-        text-decoration: none;
-    }
-    
-  .item_f2 {
-    flex: 1;
+.item_f2 
+{
     font-family: "Roboto Slab", sans-serif;
     color: rgb(196, 196, 196);
     font-weight: 400;
     font-size: 85%;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-top: 20px;
+    margin-right: 4%;
     text-decoration: none;
-  }
-  .copyright {
+}
+
+.copyright 
+{
     font-family: "Roboto Slab", sans-serif;
     color: rgb(255, 255, 255);
-    margin-top: 4%;
-    font-size: 1.2rem;
     padding-bottom: 30px;
+    font-size: 80%;
     text-align: center;
-  }
-}
-@media (max-width: 560px) {
-  .container_f {
-    display: flex;
-    margin: 0%;
-    padding: 0%;
-    flex-direction: column;
-    align-items: center;
-    flex-basis: 100%;
-  }
-
-  .logo {
-    flex: 1;
-    order: 1;
-    margin: 4%;
-    margin-bottom: 0%;
-  }
-  .logo img {
-    margin-left: 60px;
-    width: 80%;
-  }
-
-  .vox_f {
-    flex: 1;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-  }
-  .blue {
-    background-color: #031d3a;
-  }
-  .hox_f1 {
-    flex: 1;
-    margin: 1%;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .item_f1 {
-    flex: 1;
-    font-family: "Roboto Slab", sans-serif;
-    color: white;
-    font-weight: 500;
-    margin-top: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
-    text-decoration: none;
-  }
-  .item_f2 {
-    flex: 1;
-    font-family: "Roboto Slab", sans-serif;
-    color: rgb(238, 238, 238);
-    font-weight: 400;
-    font-size: 1.5rem; 
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-top: 20px;
-    text-decoration: none;
-  }
-
-  .copyright {
-    order: 4;
-    font-family: "Roboto Slab", sans-serif;
-    color: rgb(255, 255, 255);
-    margin-top: 4%;
-    font-size: 1.5rem;
-    padding-bottom: 30px;
-    text-align: center;
-  }
-}
-.item_f1:hover {
-  cursor: pointer;
-}
-.item_f2:hover {
-  cursor: pointer;
 }
 
-* {
-  margin: 0;
-  padding: 0;
+@media screen and (max-width: 1160px) 
+{
+    .logo 
+    {
+        width: 10.67rem;
+        height: 4rem;
+        margin: 2% 0 2% 2%;
+    }
+
+    .hox_f1 
+    {
+        margin: 2% 0;
+    }
+
+
+} 
+
+@media screen and (max-width: 980px) 
+{
+    .container_f 
+    {
+        flex-direction: column;
+    }
+
+    .hox_f1 
+    {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+@media screen and  (max-width: 680px) {
+    .container_f 
+    {
+        flex-basis: 100%;
+    }
+  
+    .vox_f 
+    {
+        width: 60%;
+        flex-direction: row;
+        margin: 1.4rem auto;
+    }
+
+    .hox_f1
+    {
+        flex-direction: column;
+    }
+
+    .item_f1,
+    .item_f2
+    {
+        font-size: 1.2rem;
+        margin: 0.3rem;
+        color: white;
+        width: max-content;
+    }
+
+    .f2 
+    {
+        align-items: flex-end;
+    }
+}
+
+@media screen and  (max-width: 480px) 
+{
+    .item_f1,
+    .item_f2
+    {
+        font-size: 1.1rem;
+        margin: 0.5rem;
+    }
+
+    .vox_f 
+    {
+        width: 65%;
+        margin: 1rem auto;
+    }
 }
