--- a/src/Components/Reusable/Dropdown/Dropdown.css
+++ b/src/Components/Reusable/Dropdown/Dropdown.css
@@ -36,3 +36,46 @@
     width: 0% !important;
     height: 0% !important;
 }
+
+@media screen and (max-width: 980px) 
+{
+    .drop-div 
+    {
+        position: relative;
+        width: calc(100% + 0.5rem);
+        height: 6.5rem;
+        margin-left: -1rem;
+        margin-bottom: -0.2rem;
+    }
+
+    .dropdown-menu 
+    {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: inherit;
+        height: inherit;
+        margin-top: 1rem !important;
+        background-color: var(--bg-main);
+    }
+
+    .dropdown-menu a
+    {
+        color: white;
+        font-size: 1.2rem;
+    }
+
+    .dropdown-menu li 
+    {
+        justify-content: center;
+        padding: 0.9rem 0!important;
+    }
+}
+
+@media screen and (max-width: 572px)
+{
+    .drop-div 
+    {
+        width: calc(100% + 1rem);
+    }
+}
