--- a/src/Components/Reusable/Navbar/Navbar.css
+++ b/src/Components/Reusable/Navbar/Navbar.css
@@ -257,7 +257,7 @@
     .side_li > a:visited
     {
         color: var(--white);
-        border-bottom: 1px solid white;
+        padding-top: 0rem;
         padding-bottom: 0;
     }
 
