--- a/src/Components/Reusable/Dropdown/Dropdown.css
+++ b/src/Components/Reusable/Dropdown/Dropdown.css
@@ -42,20 +42,21 @@
     .drop-div 
     {
         position: relative;
-        width: calc(100% + 0.5rem);
-        height: 6.5rem;
-        margin-left: -1rem;
-        margin-bottom: -0.2rem;
+        width: calc(100% + 0.4rem);
+        /* height: 6.5rem; */
+        margin-left: -0.9rem;
+        margin-bottom: -1.2rem;
+        height: calc(100% + 1rem);
     }
 
     .dropdown-menu 
     {
-        position: absolute;
+        position: relative;
         top: 0;
         left: 0;
         width: inherit;
         height: inherit;
-        margin-top: 1rem !important;
+        margin-top: 0.5rem !important;
         background-color: var(--bg-main);
     }
 
@@ -76,6 +77,7 @@
 {
     .drop-div 
     {
-        width: calc(100% + 1rem);
+        width: calc(100% + 1rem); 
+        margin-left: -1rem;
     }
 }
