--- a/src/Components/People/Faculty/Faculty.css
+++ b/src/Components/People/Faculty/Faculty.css
@@ -2,7 +2,7 @@
 {
     width: 100%;
     height: 100%;
-    padding: 3rem 0 2rem 0;
+    padding: 0 0 2rem 0;
     background-color: #f7f7f7;
     font-family: "Montserrat";
     line-height: 1.4;
@@ -23,6 +23,14 @@
     grid-column-gap: 50px;
     margin: 2rem auto 0 auto;
     
+}
+
+.faculty-h2
+{
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 3rem 1rem 0.5rem 0;
+    margin: 0 0 0 7%;
 }
 
 .faculty_grid h3
