--- a/src/Components/Alumni/alumni.css
+++ b/src/Components/Alumni/alumni.css
@@ -1,10 +1,14 @@
 .section_alumni
 {
-    width: 92%;
-    margin: 0 auto;
-    padding: 3rem 0;
-    display: grid;
-    grid-template-columns: repeat(3, 300px);
-    grid-auto-rows: 460px;
-    grid-gap: 10%;
+    width: 96%;
+    margin: 1rem auto;
+    font-family: "Poppins", sans-serif;
+    display: flex;
+}
+
+.alumni-div 
+{
+    width: calc(100% - 22rem);
+    text-align: justify;
+    margin-top: 2rem;
 }
