--- a/src/Components/Academics/Sub/Courses.css
+++ b/src/Components/Academics/Sub/Courses.css
@@ -11,6 +11,15 @@
     
 }
 
+.table_programs table
+{
+    width: 90% !important;
+    margin: 2rem auto !important;
+}
+
+
+
+
 .main-courses h4 
 {
     font-family: "Poppins", "Sans-serif";
