Updated Contacts Section

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
     --bg-main: #031d3a; /* #0c2340 */
     --bg-offwhite: #f6f6f7;
     --ash: #555;
-    --white: #fff;
+    --white: #FEFEFA;
 }
 
 ::selection
