--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,9 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 .section_contacts
 {
-    height: max-content;
-    margin-bottom: 5rem;
+    margin: 0;
+    font-family: "Poppins", sans-serif !important;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.75;
+    color: #666666;
+    background-color: #FFF;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-.section_contacts figure
+
+/* .section_contacts figure
 {
     position: relative;
     width: 100%;
@@ -30,7 +41,7 @@
     color: white;
     font-size: 4rem;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-}
+} */
 
 .contact_card-div
 {
@@ -77,5 +88,348 @@
 }
 
 
+/* ---Google Maps--- */
+.contact-map {
+    height: 500px;
+    width: 100%;
+    display: block;
+  }
+  
+  @media (max-width: 767px) {
+    .contact-map {
+      height: 400px;
+    }
+  }
 
 
+
+/*----------------------------------------*/
+/*    17. Pages - Contact
+/*----------------------------------------*/
+.contact-info .section-title p {
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  
+  .info {
+    border: 1px solid #ebebeb;
+    padding: 0 32px 32px;
+    text-align: center;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  
+  @media (max-width: 991px) {
+    .info {
+      padding: 0 28px 28px;
+    }
+  }
+  
+  .info .info-icon {
+    background-color: #FFF;
+    margin-top: -30px;
+    width: 80px;
+    height: 65px;
+    padding: 0 10px;
+    margin-bottom: 10px;
+  }
+  
+  .info .info-icon i {
+    font-size: 48px;
+    color: #122179;
+  }
+  
+  .info .info-content .title {
+    font-size: 20px;
+    color: #212121;
+    margin-bottom: 10px;
+    font-weight: normal;
+  }
+  
+  .contact-form {
+    color: #212121;
+    font-size: 20px;
+  }
+  
+  .contact-form .input-item {
+    padding: 10px 20px;
+  }
+  
+  .contact-form .input-item, .contact-form .textarea-item {
+    width: 100%;
+    border: 0;
+    font-size: 14px;
+    background: #E9ECEF;
+  }
+  
+  .contact-form .input-item:focus, .contact-form .textarea-item:focus {
+    border: 0px;
+    outline: 0px;
+  }
+  
+  .contact-form .textarea-item {
+    min-height: 130px;
+    padding: 10px 20px;
+  }
+  
+  p.form-messege {
+    font-size: 16px;
+    margin-bottom: 0;
+    display: inline-block;
+    padding-top: 30px;
+    line-height: 1;
+    display: none;
+  }
+  
+  p.form-messege.success {
+    display: block;
+  }
+  
+  p.form-messege.error {
+    display: block;
+  }
+
+
+
+  /*common styles*/
+  .container,
+.container-fluid,
+.container-sm,
+.container-md,
+.container-lg,
+.container-xl,
+.container-xxl {
+  --bs-gutter-x: 30px;
+  width: 100%;
+  padding-right: calc(var(--bs-gutter-x) / 2);
+  padding-left: calc(var(--bs-gutter-x) / 2);
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 576px) {
+  .container, .container-sm {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container, .container-sm, .container-md {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container, .container-sm, .container-md, .container-lg {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container, .container-sm, .container-md, .container-lg, .container-xl {
+    max-width: 1200px;
+  }
+}
+
+@media (min-width: 1600px) {
+  .container, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
+    max-width: 1201px;
+  }
+}
+
+.row {
+  --bs-gutter-x: 30px;
+  --bs-gutter-y: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  margin-top: calc(var(--bs-gutter-y) * -1);
+  margin-right: calc(var(--bs-gutter-x) / -2);
+  margin-left: calc(var(--bs-gutter-x) / -2);
+}
+
+.row > * {
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x) / 2);
+  padding-left: calc(var(--bs-gutter-x) / 2);
+  margin-top: var(--bs-gutter-y);
+}
+  
+iframe {
+    border: 0;
+  }
+  
+  .offset-lg-7 {
+    margin-left: 58.33333%;
+  }
+
+  @media (min-width: 992px) {
+  
+ 
+  
+
+    .offset-lg-2 {
+      margin-left: 16.66667%;
+    }
+  
+  
+  
+  
+    
+  }
+  
+.col-md-6 {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+    width: 50%;
+  }
+
+  .offset-lg-8 {
+    margin-left: 66.66667%;
+  }
+
+
+  .col-lg-8 {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+    width: 66.66667%;
+  }
+
+  .col-12 {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+    width: 100%;
+  }
+
+  .mb-6 {
+    margin-bottom: 30px !important;
+  }
+
+  .bg-light {
+    background-color: #F8F9FA !important;
+  }
+
+
+
+  .pt-90 {
+    padding-top: 90px;
+  }
+  
+  @media (max-width: 767px) {
+    .pt-90 {
+      padding-top: 50px;
+    }
+  }
+
+
+  .pb-90 {
+    padding-bottom: 90px;
+  }
+  
+  @media (max-width: 767px) {
+    .pb-90 {
+      padding-bottom: 50px;
+    }
+  
+  }
+
+  .mb-10 {
+    margin-bottom: 50px !important;
+  }
+
+  .col-md-4 {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+    width: 33.33333%;
+  }
+
+
+  .btn {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.75;
+    color: #666666;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 6px 12px;
+    font-size: 1rem;
+    border-radius: 4px;
+    -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+    -o-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  }
+  
+  @media (prefers-reduced-motion: reduce) {
+    .btn {
+      -webkit-transition: none;
+      -o-transition: none;
+      transition: none;
+    }
+  }
+  
+  .btn:hover {
+    color: #666666;
+  }
+
+  .btn-primary {
+    color: #FFF;
+    background-color: #122179;
+    border-color: #122179;
+  }
+  
+  .btn-primary:hover {
+    color: #FFF;
+    background-color: #0d1858;
+    border-color: #0b154d;
+  }
+
+  .btn-hover-dark:hover {
+    border-color: #343A40;
+    background-color: #343A40;
+    color: #FFF;
+  }
+
+  .mb-n10 {
+    margin-bottom: -50px !important;
+  }
