Updated contents for NAAC visit

--- a/src/App.css
+++ b/src/App.css
@@ -68,4 +68,9 @@ li
 
 
 
-
+/* Styles for overriding Bootstrap css */
+h1, h2, h3, h4, h5, h6, ul, p
+{
+    margin-bottom: 0;
+    padding-left: 0;
+}
