--- a/src/Components/Main/Program/Program.css
+++ b/src/Components/Main/Program/Program.css
@@ -1,17 +1,9 @@
 .section_program
 {
     width: 90%;
-    margin: 0 auto;
     font-family: "Poppins", sans-serif;
     color: #0c2340;
-}
-
-.section_program > h2
-{
-    display: inline-block;
-    position: relative;
-    padding: 1rem 0;
-    margin-bottom: 2rem;
+    
 }
 
 .program_box
@@ -20,6 +12,7 @@
     width: 100%;
     height: 28rem;
     margin: 0 auto 3rem auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -39,6 +32,10 @@
     height: 7rem;
     margin:0 10rem 0 0;
     cursor: pointer;
+}
+
+.program_list li a {
+    color: #0c2340 !important;
 }
 
 .list_head
