--- a/src/Components/Reusable/Button/Button.css
+++ b/src/Components/Reusable/Button/Button.css
@@ -1,4 +1,4 @@
-.btn
+.btn-custom
 {
     display: block;
     padding: 16px 32px;
@@ -49,7 +49,7 @@
 
 @media screen and (max-width: 360px)
 {
-    .btn
+    .btn-custom
     {
         padding: 10px 20px;
     }
