--- a/src/Components/Reusable/Card/Card.css
+++ b/src/Components/Reusable/Card/Card.css
@@ -1,4 +1,4 @@
-.div_card
+/* .div_card
 {
     width: 100%;
     background-color: #fff;
@@ -18,7 +18,7 @@
     transform: translate(-50%, -50%);
     color: var(--white);
     font-family: "Roberto", sans-serif;
-}
+} */
 
 /* .div_card h4 span
 {
@@ -26,12 +26,12 @@
     padding: 1rem 1.12rem;
 } */
 
-.pic_container
+/* .pic_container
 {
     width: inherit;
     height: 100%; /* 10rem*/
-    position: relative;
-}
+    /*position: relative;
+/*} 
 
 .pic_container > img
 {
@@ -69,6 +69,131 @@
 {
     background-color: var(--bg-main);
     color: var(--white);
+} */
+
+
+@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
+
+/* * {
+  margin: 0;
+  padding: 0;
 }
 
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+body {
+  background-color: #eee;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+} */
+
+.grid {
+  display: grid;
+  width: 90%;
+  margin: 0 auto;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  align-items: start;
+}
+
+.grid-item {
+  background-color: #fff;
+  border-radius: 0.4rem;
+  overflow: hidden;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: 0.2s;
+  font-family: "Poppins", sans-serif;
+}
+
+.grid-item:hover {
+  transform: translateY(-0.5%);
+  box-shadow: 0 4rem 8rem rgba(0, 0, 0, 0.5);
+}
+
+.card-img {
+  display: block;
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+}
+
+.card-content {
+    padding: 0.7rem 0.8rem 0 0.8rem; 
+    display: flex;
+    height: 100%;
+    /* height: calc(100% - 180px); */
+    flex-direction: column;
+    align-items: center;
+    grid-gap: 33px;
+} 
+
+.card-content a{
+    width: 100%;
+ }
+
+.card-content  {
+    margin: 0 auto;
+}
+
+.card-header {
+  font-size: 2rem;
+  font-weight: 400;
+  color: #0d0d0d;
+  margin-bottom: 0.4rem;
+}
+
+.card-text {
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+  line-height: 1.5;
+  color: #3d3d3d;
+  margin-bottom: 0.4rem;
+}
+
+.card-btn {
+  display: block;
+  width: 100%;
+  padding: 1rem;
+  font-size: 1.3rem;
+  text-align: center;
+  color: #3363ff;
+  background-color: #d8e0fd;
+  border: none;
+  border-radius: 0.4rem;
+  transition: 0.2s;
+  cursor: pointer;
+  letter-spacing: 0.1rem;
+}
+
+.card-btn span {
+  margin-left: 1rem;
+  transition: 0.2s;
+}
+
+.card-btn:hover,
+.card-btn:active {
+  background-color: #c2cffc;
+}
+
+.card-btn:hover span,
+.card-btn:active span {
+  margin-left: 1.5rem;
+}
+
+/* @media only screen and (max-width: 60em) {
+  body {
+    padding: 3rem;
+  }
+
+  .grid {
+    grid-gap: 3rem;
+  }
+} */
 
