--- a/src/Components/Reusable/Head/Heading.css
+++ b/src/Components/Reusable/Head/Heading.css
@@ -1,6 +1,12 @@
-.main_head {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap");
+
+.main_head h2{
     width: 100%;
     height: 60px;
-    display: flex;
-    justify-content: center;
+    font-size: 35px;
+    font-family: "Poppins", sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
 }
